# serializer version: 1
# name: test_audit_html_content_hash
  'c57eaf2a427a015a7bcc4b7d6a30fe6d34d8a753d1bbd6c6bfd44c5d29855a48'
# ---
# name: test_calcbook_xlsx_content_hash
  '7e1979eb8980b1d065942a92151d75bbec9cdbe87bf2dfd6374b9d9dec48cedb'
# ---
# name: test_dxf_content_hash
  '4dfb7e2ab4bc3201e5aabe6de49bd3c0aa27db96e2cae7971ff93695a5824f25'
# ---
# name: test_profile_dxf_content_hash
  'b280c2c7f27ad644f5519bd302882e7e808bf042e490f179f0ce0b33e9f6b182'
# ---
